add react frontend
